--- a/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="account_id_not_login">Atingeți pentru a vă conecta</string>
     <string name="account_info">Contul meu</string>
     <string name="account_name_not_login">Conectaţi-vă</string>
     <string name="account_unactivated">Contul nu este activat</string>
     <string name="all_resources">Toate</string>
-    <string name="all_ringtone_resource">Toate</string>
     <string name="app_name">Teme</string>
     <string name="apply_default_font_tip">Păstraţi fontul actual?</string>
     <string name="apply_font_btn_exclude">Nu acum</string>
     <string name="apply_font_btn_reboot">Reporniţi</string>
     <string name="apply_font_tip">Reporniţi pentru a aplica fontul acestei teme</string>
     <string name="apply_theme_with_ringtones">Utilizaţi tonurile de apel incluse în teme</string>
-    <string name="backup_preference_title">Copie de rezervă</string>
+    <string name="audio_duration_minutes_format">%1$d minute</string>
+    <string name="audio_duration_seconds_format">%1$d secunde</string>
     <string name="backup_theme_dialog_message">Creaţi o copie de rezervă a temei actuale?</string>
     <string name="backup_theme_dialog_ok">Copie de rezervă</string>
     <string name="backup_theme_fail_trial_rights_message">Nu se poate crea copia de rezervă pentru această temă</string>
     <string name="backup_theme_name">Tema mea</string>
     <string name="backup_theme_progress_message">Creare copie de rezervă…</string>
     <string name="backup_theme_success_message">Copia de rezervă a fost creată</string>
+    <string name="browser_local_resource">Resurse locale</string>
+    <string name="change_host_hint">Modificare gazdă</string>
     <string name="change_wallpaper">Imagine de fundal</string>
     <string name="choose_new_themes">Teme</string>
     <string name="close">Închideţi</string>
+    <string name="component_backup_preference_title">Faceți o copie de rezervă a temei</string>
     <string name="component_category_finest_title">Recomandate</string>
     <string name="component_category_more_title">Altele</string>
+    <string name="component_title_ringtone">Sunet de apel</string>
+    <string name="component_title_wallpaper">Imagine de fundal</string>
+    <string name="current_using_desktop_wallpaper_text">Ecranul principal</string>
+    <string name="current_using_lockscreen_wallpaper_text">Blocarea ecranului</string>
     <string name="deleting">Ştergere…</string>
     <string name="description_author">Autor</string>
     <string name="description_designer">Designer</string>
@@ -34,6 +40,8 @@
     <string name="description_version">Versiune</string>
     <string name="description_version_szie">Versiune: %1$s Dimensiune: %2$s</string>
     <string name="desktop_wallpaper">Ecran principal</string>
+    <string name="dev_options">OPȚIUNI DEZVOLTATOR</string>
+    <string name="dev_options_summary">Resurse Web</string>
     <string name="download_failed">Descărcare eşuată</string>
     <string name="download_preview_failed">Încărcarea previzualizării a eşuat</string>
     <string name="download_success">Descărcare finalizată</string>
@@ -73,10 +81,14 @@
     <string name="gift_use_confirmation_dlg_title">Trimiteţi acest cadou?</string>
     <string name="gift_use_fail_dlg_title">Ceva a mers prost</string>
     <string name="gift_used">Trimis</string>
+    <string name="incompatible_dialog_message">Această temă nu este compatibilă în întregime cu MIUI 8. Unele elemente pot fi afișate incorect.</string>
+    <string name="incompatible_dialog_ok">Am înțeles</string>
+    <string name="incompatible_dialog_title">Probleme de compatibilitate</string>
     <string name="live_wallpaper">Imagini de fundal live</string>
     <string name="loading">Doar o secundă…</string>
     <string name="loading_resource_detail_fail">Nu a reuşit încărcarea resursei</string>
     <string name="loading_resource_detail_info">Doar o secundă…</string>
+    <string name="local_resouce_creator_name">Dezvoltator: %1$s</string>
     <string name="lockscreen_magazine_subscribe">%1$s fani</string>
     <string name="lockscreen_magazine_summary">Categorii</string>
     <string name="lockscreen_magazine_system_subscribe">%1$s imagini de fundal</string>
@@ -84,18 +96,22 @@
     <string name="lockscreen_magazine_title">Ecrane de blocare zilnice</string>
     <string name="lockscreen_wallpaper">Blocare ecran</string>
     <string name="lockstyle_personal_settings">Personalizare</string>
-    <string name="long_ringtone_resource">Lungi</string>
     <string name="mi_wallpaper">Imagini de fundal MIUI</string>
     <string name="my_gifts">Cadouri</string>
     <string name="my_gifts_purchased">Achiziționată</string>
     <string name="my_gifts_received">Primit</string>
+    <string name="no_data">"Nu se poate conecta la rețea"</string>
     <string name="online_no_network">Imposibil de conectat la reţea</string>
     <string name="online_search_hint">Căutaţi resurse online</string>
-    <string name="payment_info">Credite Mi</string>
     <string name="present_local_themes">Descărcate</string>
     <string name="present_online_themes">Obțineți mai multe teme gratuit</string>
+    <string name="provision_default_theme_title">Implicit</string>
+    <string name="provision_loading_tips">Doar o secundă…</string>
+    <string name="provision_second_title">Selectați una din cele 5 teme implicite</string>
+    <string name="provision_title">Selectați o temă</string>
     <string name="purchased_list">Teme achiziționate</string>
     <string name="purchased_list_format">%1$s achiziționate</string>
+    <string name="reload">Încercați din nou</string>
     <string name="resource_account_abnormal_state">Eroare de cont. Aşteptaţi un minut sau două şi încercaţi din nou.</string>
     <string name="resource_account_fail_to_add">Adăugarea contului a eşuat</string>
     <string name="resource_account_login">Conectaţi-vă</string>
@@ -106,6 +122,7 @@
     <string name="resource_app_name">Browser resurse</string>
     <string name="resource_apply">Aplicaţi</string>
     <string name="resource_apply_trial">Încercaţi acum</string>
+    <string name="resource_back">Înapoi</string>
     <string name="resource_buy">Cumpăraţi</string>
     <string name="resource_can_not_selected">%1$s nu poate fi selectat</string>
     <string name="resource_category">Categorii</string>
@@ -146,6 +163,7 @@
     <string name="resource_comment_upload_not_bought">Trebuie să aplicaţi tema înainte de a putea scrie comentarii despre ea</string>
     <string name="resource_comment_upload_not_logined">Conectaţi-vă mai întâi</string>
     <string name="resource_comment_upload_success">Comentariul dvs. va fi afișat după o scurtă trecere în revistă.</string>
+    <string name="resource_continue">Mai departe</string>
     <string name="resource_default">Ton de apel prestabilit</string>
     <string name="resource_default_name">Resursă</string>
     <string name="resource_delete">Ştergeţi</string>
@@ -156,6 +174,8 @@
     <string name="resource_delta_update_total">%1$d actualizări delta. Salvat %2$s</string>
     <string name="resource_detail">Detalii</string>
     <string name="resource_detail_comment_title">Comentarii</string>
+    <string name="resource_detail_description_pic_text">%1$d miniaturi în total</string>
+    <string name="resource_detail_header_theme_designer_title">Designer: %1$s</string>
     <string name="resource_detail_jump_to_online_title">On-line</string>
     <string name="resource_detail_jump_to_same_author_title">Acelaşi autor</string>
     <string name="resource_detail_recommend_desiner_other_themes">Alte teme concepute de %1$s</string>
@@ -202,7 +222,6 @@
     <string name="resource_import_successful">Descărcare finalizată</string>
     <string name="resource_importing">Import…</string>
     <string name="resource_list_title">Ultima selectată</string>
-    <string name="resource_local">%1$s local(e)</string>
     <string name="resource_menu_refresh">Reîmprospătaţi</string>
     <string name="resource_mute">Niciunul</string>
     <string name="resource_my">Locale</string>
@@ -232,18 +251,11 @@
     <string name="resource_ringtone_playing_error">Eroare de redare</string>
     <string name="resource_ringtone_volume_mute">Modul Silenţios este activat</string>
     <string name="resource_save_to_note">Salvaţi în Note</string>
-    <string name="resource_search_color">Atingeţi o culoare pentru a căuta</string>
-    <string name="resource_search_color_hint_black">Negru</string>
     <string name="resource_search_color_hint_blue">Albastru</string>
-    <string name="resource_search_color_hint_brown">Maro</string>
-    <string name="resource_search_color_hint_cyan">Azur</string>
-    <string name="resource_search_color_hint_gray">Gri</string>
     <string name="resource_search_color_hint_green">Verde</string>
     <string name="resource_search_color_hint_orange">Portocaliu</string>
-    <string name="resource_search_color_hint_pink">Roz</string>
     <string name="resource_search_color_hint_purple">Violet</string>
     <string name="resource_search_color_hint_red">Roşu</string>
-    <string name="resource_search_color_hint_white">Alb</string>
     <string name="resource_search_color_hint_yellow">Galben</string>
     <string name="resource_search_list_empty">Nu a fost găsit nimic.</string>
     <string name="resource_see_more">Mai multe</string>
@@ -289,11 +301,16 @@
     <string name="resource_update">Actualizaţi</string>
     <string name="resource_user_know">OK</string>
     <string name="resource_waiting_download">Aşteptare…</string>
-    <string name="sdcard_not_mounted_dialog_message">Introduceţi cardul SD sau dezactivaţi stocarea USB\n</string>
+    <string name="resource_waiting_pause">Pauză</string>
+    <string name="sdcard_not_mounted_dialog_message">"Introduceţi cardul SD acum
+"</string>
     <string name="sdcard_not_mounted_dialog_title">Cardul SD nu a fost detectat</string>
+    <string name="search_hint_header_text">Expresii frecvente</string>
     <string name="selected_resource_file_invalid">Imposibil de utilizat fişierul selectat</string>
     <string name="settings">Setări</string>
-    <string name="short_ringtone_resource">Scurte</string>
+    <string name="theme_apply_audio_dialog_item_alarm">Alarmă</string>
+    <string name="theme_apply_audio_dialog_item_notification">Notificări</string>
+    <string name="theme_apply_audio_dialog_item_ringtone">Sunet de apel</string>
     <string name="theme_apply_failured">Nu se poate aplica fundalul ecranului de blocare</string>
     <string name="theme_apply_success">Fundal aplicat</string>
     <string name="theme_applying">Aplicare…</string>
@@ -302,6 +319,7 @@
     <string name="theme_batch_update_dlg_content_single">Actualizaţi %1$s acum?</string>
     <string name="theme_batch_update_dlg_title">Actualizaţi tema</string>
     <string name="theme_batch_updating_text">Actualizare (%1$d)…</string>
+    <string name="theme_bug_report">Comentariu</string>
     <string name="theme_changed_failed_message">Aplicare eşuată</string>
     <string name="theme_changed_message">Temă aplicată</string>
     <string name="theme_changing_dialog_title">Aplicare…</string>
@@ -350,10 +368,6 @@
     <string name="theme_precast_create_notification_title">Actualizat la MIUI 7</string>
     <string name="theme_precast_update_notification_content">Apăsați pentru a vizualiza teme noi.</string>
     <string name="theme_precast_update_notification_title">Actualizat la MIUI 7</string>
-    <string name="theme_provision_default_theme_title">Prestabilită</string>
-    <string name="theme_provision_loading_tips">Doar o secundă…</string>
-    <string name="theme_provision_oper_button_next">Înainte</string>
-    <string name="theme_provision_title">Selectaţi o temă</string>
     <string name="theme_purchased_list_empty">Nu ați achiziționat nicio temă.</string>
     <string name="theme_purchased_non_local">On-line</string>
     <string name="theme_select_others">Răsfoiţi</string>
@@ -370,11 +384,12 @@
     <string name="theme_user_agreement_remind_summary">Se afişează Condițiile de utilizare de fiecare dată când se deschide aplicația Teme. Această setare va avea efect după ce reporniți dispozitivul.</string>
     <string name="theme_user_agreement_title">Condiții de utilizare</string>
     <string name="theme_yes">Da</string>
-    <string name="third_party_pickers_activity_title">Setaţi %1$s</string>
-    <string name="title_component">Editaţi tema</string>
-    <string name="title_system_resource">Descărcate</string>
+    <string name="title_component">Personalizați tema</string>
+    <string name="title_my_audio_resource">Sunetele mele de apel</string>
+    <string name="title_my_wallpaper_resource">Imaginile mele de fundal</string>
+    <string name="title_system_audio_resource">Sunete de sistem</string>
+    <string name="title_system_wallpaper_resource">Imagini de fundal ale sistemului</string>
     <string name="to_activate_the_account">Activaţi contul dvs. Mi acum</string>
-    <string name="vip_level_value">LV %d</string>
     <string name="wallpaper_crop">Decupaţi</string>
     <string name="wallpaper_decoded_error">Imposibil de încărcat imaginea de fundal</string>
     <string name="wallpaper_loading_text">Doar o secundă…</string>
