--- a/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SoundRecorder.apk/res/values-ro/strings.xml
@@ -20,6 +20,7 @@
     <string name="delete">Ştergeţi</string>
     <string name="delete_dialog_message">Ştergeţi înregistrarea?</string>
     <string name="deleting_message">Ştergere…</string>
+    <string name="details">Detalii</string>
     <string name="dialog_content_storage_full">Din cauza lipsei spațiului de stocare, înregistrarea a fost oprită. Eliminaţi fișierele inutile prin intermediul Explorer-ului.</string>
     <string name="dialog_title_storage_full">Spaţiu insuficient</string>
     <string name="duration_format_hour">%s h</string>
@@ -32,9 +33,13 @@
     <string name="error_filename_too_long">Numele fişierului este prea lung</string>
     <string name="error_sdcard_access">Imposibil de accesat stocarea internă sau externă</string>
     <string name="error_sdcard_unmounted">Introduceţi cardul SD</string>
+    <string name="export_to_note">Exportați în Note</string>
     <string name="fm_record">Înregistrări radio (%d)</string>
+    <string name="invalid_argument">Argument invalid</string>
     <string name="low_battery_error">Acumulatorul telefonului are mai puțin de 5% disponibil. Pentru ca înregistrarea să nu fie pierdută, ea a fost oprită și salvată. Deconectarea neașteptată poate duce la pierderea înregistrării; se recomandă ca înregistrarea să se efectueze atunci când acumulatorul este complet încărcat.</string>
+    <string name="mark_point_list_title">Marcaje</string>
     <string name="message_file_size_error">Înregistrarea a atins lungimea maximă susţinută de %s</string>
+    <string name="new_record_name">Înregistrare nouă</string>
     <string name="no_file">Nicio înregistrare</string>
     <string name="notification_message_all_paused">Poate crește utilizarea datelor mobile</string>
     <string name="notification_playback">Redare…</string>
@@ -43,7 +48,10 @@
     <string name="notification_stopped">Înregistrare oprită</string>
     <string name="notification_title_all_paused">Descărcare în pauză</string>
     <string name="notification_warning">Stocare insuficientă (mai puţin de %d minute)…</string>
+    <string name="path_soundrecorder_setting">Aplicații de sistem/Înregistrare</string>
     <string name="pause">Pauză</string>
+    <string name="playback_delete_records">Ștergeți înregistrarea</string>
+    <string name="playback_share_records">Partajați înregistrarea</string>
     <string name="preference_enable_earpiece_summary">Utilizați difuzorul frontal pentru redare audio</string>
     <string name="preference_enable_earpiece_title">Utilizați difuzorul frontal</string>
     <string name="preference_led_indicator">Înregistrare în blocarea ecranului</string>
@@ -52,6 +60,19 @@
     <string name="preference_scenes">Tip înregistrare</string>
     <string name="preference_silent_mode">Dezactivaţi soneria în timpul înregistrării</string>
     <string name="preference_tip_rename">Denumire înregistrare în mod manual</string>
+    <string name="recognition_error_cancel">Anulată</string>
+    <string name="recognition_error_download_cancel">Mai târziu</string>
+    <string name="recognition_error_download_fail">"Nu s-a putut descărca. Verificați setările rețelei și reîncercați."</string>
+    <string name="recognition_error_download_msg">Descărcați motorul de recunoaștere pentru a face acest seviciu disponibil.</string>
+    <string name="recognition_error_download_ok">Descărcați</string>
+    <string name="recognition_error_download_title">Motoruil de recunoaștere lipsește</string>
+    <string name="recognition_error_downloading">Descărcare</string>
+    <string name="recognition_error_engine">Eroare a motorului de recunoaștere</string>
+    <string name="recognition_error_engine_singleton">Motorul de recunoaștere este ocupat</string>
+    <string name="recognition_error_format">Format audio invalid</string>
+    <string name="recognition_error_internal">Eroare internă</string>
+    <string name="recognition_error_stopped">Recunoașterea s-a oprit</string>
+    <string name="recognition_status_downloading">Se descarcă</string>
     <string name="record_back_pressed_hint">Pentru a opri înregistrarea, atingeţi Înapoi din nou</string>
     <string name="record_download">Descărcaţi din Mi Cloud</string>
     <string name="record_download_complete">Descărcat</string>
@@ -62,30 +83,53 @@
     <string name="record_downloading_notification_count">descărcat %d</string>
     <string name="record_list">Înregistrări</string>
     <string name="record_list_call">Înregistrări apeluri</string>
+    <string name="record_list_category_title_format">MMMM yyyy</string>
     <string name="record_list_cloud">Înregistrări în Cloud</string>
     <string name="record_list_cloud_call">Înregistrări apeluri în Cloud</string>
     <string name="record_list_cloud_fm">Înregistrări FM în Cloud</string>
     <string name="record_list_fm">Înregistrări FM</string>
+    <string name="record_mark_point">Marcați %s</string>
     <string name="record_name_hour">.</string>
     <string name="record_name_minute"/>
-    <string name="record_picker_title">Selectaţi o înregistrare</string>
     <string name="record_quliaty_preference_title">Calitate înregistrare</string>
     <string name="recording">Înregistrare</string>
+    <string name="recording_quality_high">Calitate înaltă</string>
+    <string name="recording_quality_low">Calitate scăzută</string>
+    <string name="recording_quality_standard">Calitate standard</string>
     <string name="recording_stopped">Înregistrare oprită</string>
     <string name="rename">Redenumiţi</string>
     <string name="rename_dialog_title">Redenumiţi înregistrarea</string>
     <string name="rename_duplicate">O altă înregistrare cu acelaşi nume există deja.</string>
     <string name="rename_no_more_tip">Nu se afişează din nou</string>
     <string name="retry">Reîncercaţi</string>
+    <string name="search_app">Înregistrare</string>
+    <string name="search_enable_earpiece_title">Utilizare receptor pentru redarea fișierelor audio</string>
+    <string name="search_led_indicator">Indicator luminos intermitent</string>
+  <string name="search_led_indicator_prompt">În timpul înregistrării, arată în bara de stare și led-ul de notificare la blocarea ecranului</string>
+    <string name="search_quliaty_title">Calitatea înregistrării</string>
+    <string name="search_scenes">Tipul înregistrării</string>
+    <string name="search_silent_mode">Dezactivați soneria în timpul înregistrării</string>
+    <string name="search_tip_rename">Denumire înregistrare în mod manual</string>
+    <string name="share">Partajați</string>
+    <string name="share_dialog_title">Partajați prin</string>
     <string name="sound_recorder_settings">Setări</string>
+    <string name="speech_recognition_complete">Complet</string>
+    <string name="speech_recognition_running_tip">Rulează</string>
     <string name="start">Reluaţi</string>
     <string name="status_bar_back">Pentru a merge înapoi, atingeţi această bară</string>
     <string name="status_bar_recording">Înregistrare…</string>
     <string name="status_bar_recording_pause">"Pauză înregistrare. "</string>
-    <string name="sync_only_in_wifi">Se sincronizează doar prin Wi-Fi</string>
-    <string name="sync_only_in_wifi_summary">Recorder-ul va utiliza conexiunea de date mobile pentru a descărca sau încărca înregistrările atunci când această opțiune este dezactivată</string>
-    <string name="sync_records">Sincronizare cu Mi Cloud</string>
+    <string name="text_btn_complete">Stop</string>
+    <string name="text_btn_list">Înregistrări</string>
+    <string name="text_btn_mark">Marcați</string>
+    <string name="text_btn_pause">Pauză</string>
+    <string name="text_btn_play">Redare</string>
+    <string name="text_btn_recognize">Recunoaștere</string>
+    <string name="text_btn_recording">Înregistrare</string>
+    <string name="text_btn_wave">Undă</string>
+    <string name="text_finish">Confirmați</string>
     <string name="timer_format" formatted="false">%02d:%02d</string>
+    <string name="timer_format_three_sections" formatted="false">%02d:%02d:%02d</string>
     <string name="toast_max_record_time">Durată maximă atinsă: %1$s susţine până la %2$s ataşamente</string>
     <string name="toast_uninstall_fileexplorer">Aplicaţia Explorer nu este instalată</string>
     <string name="wifi_recommended_body" formatted="false">Utilizarea conexiunii de date mobile pentru descărcarea acestui fișier (%s) va crește utilizarea datelor. Dacă treceţi de limita de utilizare a datelor din planul dvs., operatorul ar putea percepe taxe suplimentare. Pentru a aștepta o conexiune Wi-Fi, atingeți %s.</string>
