--- a/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
@@ -6,6 +6,7 @@
     <string name="applications">Aplicații</string>
     <string name="category_others">Altele</string>
     <string name="category_setting">Setări</string>
+    <string name="close_panel">Inchideți meniul de asistentului</string>
     <string name="customize_entries">Personalizați funcțiile</string>
     <string name="enable_touch_assistant">Activați Asistentul ecran</string>
     <string name="function_settings">Setări funcții</string>
@@ -28,6 +29,7 @@
     <string name="name_screenshot">Captură ecran</string>
     <string name="name_wechat_payment_code">Plată Wechat</string>
     <string name="name_wechat_scan">Scanner Wechat</string>
+    <string name="open_panel">Deschideți meniul asistentului</string>
     <string name="pay_entry_dialog_title_select">Selectați aplicația</string>
     <string name="pay_entry_dialog_title_setting">Setați aplicația</string>
     <string name="pref_category_others">Altele</string>
@@ -36,6 +38,7 @@
     <string name="pref_category_system">Setări de sistem</string>
     <string name="restore_default">Restaurați la valorile implicite</string>
     <string name="restore_intro">"Restaurați la valorile implicite, inclusiv funcțiile și ordinea lor. Datele din telefon nu vor fi șterse."</string>
+    <string name="show_on_keyguard">Afișare în blocarea ecranului</string>
     <string name="vector_large_circle">m93,200c0,-59.11602 47.88398,-107 107,-107c59.11602,0 107,47.88398 107,107c0,59.11602 -47.88398,107 -107,107c-59.11602,0 -107,-47.88398 -107,-107z</string>
     <string name="vector_large_crossA">M160,160 L240,240</string>
     <string name="vector_large_crossB">M240,160 L160,240</string>
