--- a/Romanian/main/VpnDialogs.apk/res/values-ro/strings.xml
+++ b/Romanian/main/VpnDialogs.apk/res/values-ro/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="accept">Am încredere în această aplicaţie.</string>
     <string name="configure">Configuraţi</string>
     <string name="data_received">Primite:</string>
     <string name="data_transmitted">Trimise:</string>
@@ -8,7 +7,7 @@
     <string name="disconnect">Deconectaţi</string>
     <string name="duration">Durată:</string>
     <string name="legacy_title">VPN este conectat</string>
-    <string name="prompt">%s încearcă să creeze o conexiune VPN.</string>
+    <string name="prompt">Solicitare de conexiune.</string>
     <string name="session">Sesiune:</string>
-    <string name="warning">Dacă veţi continua, veţi da acestei aplicaţii permisiunea de a intercepta întregul trafic de reţea. <b>NU acceptaţi decât dacă aveţi încredere în această aplicaţie.</b> În caz contrar, există riscul ca datele dvs. să fie compromise de un software rău intenţionat.</string>
+    <string name="warning">%s dorește să creeze o conexiune VPN care îi va permite monitorizarea traficului. NU acceptaţi decât dacă aveţi încredere în această aplicaţie. &lt;br /&gt; &lt;br /&gt; &lt;img src=vpn_icon /&gt; apare în partea de sus a ecranului atunci când VPN este activ.</string>
 </resources>
