--- a/Romanian/main/WallpaperCropper.apk/res/values-ro/strings.xml
+++ b/Romanian/main/WallpaperCropper.apk/res/values-ro/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="crop_wallpaper">Decupare imagine de fundal</string>
     <string name="wallpaper_instructions">Setare imagine de fundal</string>
-    <string name="wallpaper_load_fail">Nu se poate încărca imaginea ca imagine de fundal</string>
+    <string name="wallpaper_load_fail">"Nu se poate încărca imaginea ca imagine de fundal"</string>
 </resources>
