--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -28,54 +28,60 @@
     <string name="ads_install_num"/>
     <string name="ads_score_title"/>
     <string name="app_name">Meteo</string>
-  <string name="aqi_detail_no2">NO&lt;small&gt;&lt;sub&gt;2&lt;/sub&gt;&lt;/small&gt; : %1$s μg/m&lt;small&gt;&lt;sup&gt;3&lt;/sup&gt;&lt;/small&gt;</string>
-  <string name="aqi_detail_null">--</string>
-  <string name="aqi_detail_pm10">PM10  : %1$s μg/m&lt;small&gt;&lt;sup&gt;3&lt;/sup&gt;&lt;/small&gt;</string>
-  <string name="aqi_detail_pm25">PM2.5 : %1$s μg/m&lt;small&gt;&lt;sup&gt;3&lt;/sup&gt;&lt;/small&gt;</string>
-  <string name="aqi_detail_so2">SO&lt;small&gt;&lt;sub&gt;2&lt;/sub&gt;&lt;/small&gt; : %1$s μg/m&lt;small&gt;&lt;sup&gt;3&lt;/sup&gt;&lt;/small&gt;</string>
-    <string name="aqi_detail_subtitle">ICA : %1$s</string>
-    <string name="aqi_detail_title">Indice de calitate a aerului</string>
-    <string name="aqi_quality_index_break">ICA %1$s</string>
-    <string name="aqi_quality_index_break_short_desc">%1$s</string>
-    <string name="aqi_quality_index_dangerous">ICA %1$s</string>
-    <string name="aqi_quality_index_dangerous_short_desc">%1$s</string>
-    <string name="aqi_quality_index_good">ICA %1$s</string>
-    <string name="aqi_quality_index_good_short_desc">%1$s</string>
-    <string name="aqi_quality_index_hazardous">ICA %1$s</string>
-    <string name="aqi_quality_index_hazardous_short_desc">%1$s</string>
-    <string name="aqi_quality_index_light_pollution">ICA %1$s</string>
-    <string name="aqi_quality_index_light_pollution_short_desc">%1$s</string>
-    <string name="aqi_quality_index_moderate">ICA %1$s</string>
-    <string name="aqi_quality_index_moderate_short_desc">%1$s</string>
-    <string name="aqi_quality_index_pure">ICA %1$s</string>
-    <string name="aqi_quality_index_pure_short_desc">%1$s</string>
-    <string name="aqi_quality_index_unhealthy">ICA %1$s</string>
-    <string name="aqi_quality_index_unhealthy_short_desc">%1$s</string>
+    <string name="aqi_data_source">Oferit de Caiyun Weather</string>
+    <string name="aqi_desc">Indicele de Calitate a Aerului</string>
+    <string name="aqi_detail_24_hours">Prognoza orară</string>
+    <string name="aqi_detail_5_days">Prognoza zilnică</string>
+    <string name="aqi_detail_co">CO</string>
+    <string name="aqi_detail_no2">NO₂</string>
+    <string name="aqi_detail_o3">O₃</string>
+    <string name="aqi_detail_pm10">PM10</string>
+    <string name="aqi_detail_pm25">PM2.5</string>
+    <string name="aqi_detail_so2">SO₂</string>
+    <string name="aqi_detail_sub_title">Detalii ICA</string>
+    <string name="aqi_detail_subtitle">ICA %1$s</string>
+    <string name="aqi_detail_title">Indicele de Calitate a Aerului</string>
+    <string name="aqi_publish_source">Actualizat la %1$s de CNEMC</string>
+    <string name="aqi_publish_time">Actualizat la %1$s</string>
     <string name="aqi_short_desc">ICA %1$s</string>
+    <string name="aqi_sub_desc">ICA</string>
+    <string name="aqi_top_pollution">Grad de poluare maximă</string>
     <string name="button_abandon">Renunțați la modificări</string>
+    <string name="button_add_city">Adăugați o locație</string>
     <string name="button_allow">OK</string>
     <string name="button_confirm">Permiteţi</string>
     <string name="button_exit">Ieşire</string>
     <string name="button_not_allow">Renunţaţi</string>
+    <string name="button_sure_abandon">Renunțați la modificări?</string>
+    <string name="close">Închideți</string>
     <string name="daily_forcast_drawer_on_bottom">Ascunde</string>
     <string name="daily_forcast_drawer_on_top">Prognoză extinsă</string>
-    <string name="daily_forcast_no_wind">Nu adie vântul</string>
-    <string name="daily_forcast_temperature_transfer">%1$s° / %2$s°</string>
+    <string name="daily_forcast_no_stable_direction">Vântul nu adie</string>
+    <string name="daily_forcast_no_wind">&lt;12km/h</string>
+    <string name="daily_forcast_temperature_connect"/>
+    <string name="daily_forcast_temperature_transfer">%1$s°C / %2$s°C</string>
     <string name="daily_forcast_weather_transfer">%1$s. %2$s mai târziu.</string>
     <string name="daily_forcast_whirl_wind">Tornadă</string>
     <string name="daily_forcast_wind_connect">%1$s %2$s</string>
-    <string name="edit_alert_city_title"/>
+    <string name="daily_forecast_detail_date">d/M</string>
+ 
+    <string name="edit_alert_city_title">Gestionați alertele</string>
     <string name="edit_city">Editaţi</string>
     <string name="empty">" "</string>
     <string name="first_start_network_msg">Această aplicație trebuie să se conecteze la internet și să acceseze locația dvs. pentru a funcţiona in mod normal.</string>
     <string name="first_start_network_title">Conexiune la internet și acces la locație</string>
     <string name="gps_hint">Locaţie actuală</string>
     <string name="hourly_forcast_now">Acum</string>
-  <string name="indices_desc_Precip1hr">%1$s mm</string>
+    <string name="hourly_forecast_title">Prognoză orară</string>
+    <string name="indices_desc_Precip1hr">%1$s mm</string>
     <string name="indices_desc_feel">Se simte ca la %1$s °C</string>
+    <string name="indices_desc_feel_without_pic">%1$s°C</string>
     <string name="indices_desc_humidity">Umiditate %1$s%%</string>
-  <string name="indices_desc_visibility">%1$s km</string>
+    <string name="indices_desc_humidity_without_pic">%1$s%%</string>
+    <string name="indices_desc_pressure">%1$smb</string>
+    <string name="indices_desc_visibility">%1$s km</string>
     <string name="indices_no_restriction">Nicio restricție</string>
+    <string name="indices_title">Activități recomandate</string>
     <string name="indices_title_Precip1hr">Precip. 1 oră</string>
     <string name="indices_title_car_wash">Spălat mașina</string>
     <string name="indices_title_feel">Temperatură resimțită</string>
@@ -87,15 +93,35 @@
     <string name="indices_title_visibility">Vizibilitate</string>
     <string name="information_manager_information">Informații despre vreme</string>
     <string name="information_manager_wlan">Actualizați în Wi-Fi</string>
+    <string name="information_menu_title"/>
+    <string name="information_time_source">%1$s | %2$s</string>
+    <string name="information_views"/>
+    <string name="install">Instalați</string>
     <string name="international_detail_menu_title">Detalii</string>
+    <string name="international_details_pressure_title">Presiune</string>
+    <string name="international_details_real_feel_title">TEMPERATURA RESIMȚITĂ®</string>
+    <string name="international_details_title">Detalii</string>
+    <string name="international_details_uv_index_title">Indice UV</string>
+    <string name="international_details_wind_connect">%1$s %2$s</string>
+    <string name="international_details_wind_title">VÂNT</string>
+    <string name="locate_fail_detail_err">"Nu se poate obține locația
+Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</string>
     <string name="location_management">Locaţii</string>
     <string name="location_tag">Localizare GPS</string>
+    <string name="menu_add_city">Editați locațiile</string>
     <string name="menu_location">Locaţii</string>
+    <string name="mi_pad2">latte</string>
+    <string name="more_details">Mai multe detalii</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
-    <string name="network_unavailable">Imposibil de conectat la rețea. Verificați conexiunea de date și încercați din nou.</string>
+    <string name="network_unavailable">""Nu se poate conecta la rețea""</string>
+    <string name="no_data">--</string>
     <string name="no_network_btn">Reîncercați</string>
+    <string name="open">Deschideți</string>
     <string name="open_browser">Deschideți în browser</string>
-    <string name="realtime_aqi_connection">%1$s</string>
+    <string name="pressure_connect">%1$s MB</string>
+    <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
+    <string name="realtime_humidity_title">Umiditatea relativă</string>
+    <string name="realtime_wind_default_title">Vânt</string>
     <string name="share">Partajați</string>
     <string name="share_btn_cancel">Anulaţi</string>
     <string name="share_btn_confirm">Distribuiţi</string>
@@ -106,10 +132,21 @@
     <string name="share_weather_desc">\#Meteo MIUI#Astăzi %1$s %2$s</string>
     <string name="share_weather_desc_alert">%1$s%2$s</string>
     <string name="share_weather_desc_split">,</string>
-    <string name="share_weather_save_pic_fail">Nu s-a putut efectua captura de ecran</string>
+    <string name="share_weather_save_pic_fail">"Nu s-a putut efectua captura de ecran"</string>
     <string name="sunrise">Răsărit</string>
     <string name="sunset">Apus</string>
+    <string name="temperature_unit">%1$s°C</string>
     <string name="title_share_link">Partajați linkul</string>
+    <string name="top_pollution_co">CO</string>
+    <string name="top_pollution_no2">NO2</string>
+    <string name="top_pollution_o3">O3</string>
+    <string name="top_pollution_pm10">PM10</string>
+    <string name="top_pollution_pm25">PM2.5</string>
+    <string name="top_pollution_so2">SO2</string>
+    <string name="traffic_control_daty_after_tomorrow_numbers">Poimâine: %1$s %2$s</string>
+    <string name="traffic_control_today_numbers">Astăzi: %1$s %2$s</string>
+    <string name="traffic_control_tomorrow_numbers">Mâine: %1$s %2$s</string>
+  <string name="traffic_controls">Restricții de trafic</string>
     <string name="tts_report_aqi"/>
     <string name="tts_report_city_name"/>
     <string name="tts_report_defautl_head"/>
@@ -119,9 +156,13 @@
     <string name="tts_report_weather_desc"/>
     <string name="tts_report_wind"/>
     <string name="twc_logo_title"/>
+    <string name="video_dialog_no_play"/>
+    <string name="video_dialog_play"/>
+    <string name="video_dialog_subtitle"/>
+    <string name="video_dialog_title"/>
     <string name="view_forecast_item_yesterday">Ieri</string>
     <string name="view_indexes_item_today">Astăzi</string>
     <string name="view_indexes_item_tommorrow">Mâine</string>
-    <string name="view_indexes_wind_unit"> km/h</string>
-    <string name="weather_unit">°</string>
+    <string name="weather_alert">Atenționări meteo</string>
+    <string name="wind_unit">%1$s km/h</string>
 </resources>
