--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -128,7 +128,6 @@
     <string name="forward_to_bind">Adăugați</string>
     <string name="get_device_list_failed">Nu se poate obține lista dispozitivelor</string>
     <string name="get_phone_verifycode_exceed_limit">Prea multe coduri de verificare au fost trimise la acest număr. Așteptați 24 de ore și încercați din nou.</string>
-    <string name="i_know">Am înțeles</string>
     <string name="ignore">Nu acum</string>
     <string name="input_email_address_notice">"Vom folosi această adresă de e-mail pentru verificarea contului"</string>
     <string name="just_a_second">Doar o secundă…</string>
@@ -138,10 +137,14 @@
     <string name="logout_failed">Nu se poate deconecta</string>
     <string name="mi_account_identity_title">Verificaţi identitatea dvs.</string>
     <string name="mi_pass">Mi Pass</string>
+    <string name="mi_pay_identity">Identitate</string>
     <string name="micloud_account_name">Cont Mi</string>
     <string name="micloud_space_info">Disponibil: %s</string>
     <string name="mili_center">Credite Mi</string>
     <string name="mipay_center">Portofel Mi</string>
+    <string name="multi_user_not_show_sync_activity_message_1">"Se pare că utilizați contul Mi din spațiul principal."</string>
+    <string name="multi_user_not_show_sync_activity_message_2">"În acest caz, toate datele vor fi sincronizate cu cele din spațiul secundar. Pentru a evita acest lucru, nu activați sincronizarea cu Mi Cloud"</string>
+    <string name="multi_user_not_show_sync_activity_title">"Nu activați sincronizarea cu Mi Cloud"</string>
     <string name="my_device_title">Dispozitiv actual</string>
     <string name="no_network_btn">Reîmprospătaţi</string>
     <string name="no_network_title">Nu se poate conecta la rețea.</string>
@@ -152,6 +155,7 @@
     <string name="passport_access_denied">Acces refuzat</string>
     <string name="passport_account_hint_text">Adresă de e-mail sau ID cont Mi</string>
     <string name="passport_account_identity_title">Verificaţi identitatea dvs.</string>
+    <string name="passport_account_label">Cont Mi</string>
     <string name="passport_account_name">Cont: %1$s</string>
     <string name="passport_account_not_activated">Contul nu a fost activat</string>
     <string name="passport_account_not_actived">Contul dvs. nu a fost activat</string>
@@ -169,7 +173,10 @@
     <string name="passport_checking_account">Verificare parolă…</string>
     <string name="passport_checking_input">Verificare…</string>
     <string name="passport_choose_which_one_sim">Alegeţi un număr de telefon</string>
-    <string name="passport_click_email_to_valid">\n\nPentru a vă activa contul, accesați\nlink-ul din e-mailul pe care vi l-am trimis.</string>
+    <string name="passport_click_email_to_valid">"
+    
+Pentru a vă activa contul, accesați
+link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_completed">Finalizare</string>
     <string name="passport_confirm">OK</string>
     <string name="passport_confirm_recycle_account">Da</string>
@@ -210,6 +217,7 @@
     <string name="passport_get_back_pwd">Recuperaţi parola contului</string>
     <string name="passport_get_verify_code">Obţineţi codul</string>
     <string name="passport_getting_verify_code">Obţinere</string>
+    <string name="passport_i_know">Știu</string>
     <string name="passport_identitfication_expired">Codul de verificare a expirat, porniţi de la început</string>
     <string name="passport_imei_permission_denied_message">"Vă solicităm permisiunea de a obține IMEI-ul telefonului. Mi Account utilizează IMEI-ul pentru identificarea dispozitivului cu care vă conectați/deconectați, pentru a vă menține contul în siguranță."</string>
     <string name="passport_imei_permission_denied_title">Solicitare permisiune obținere IMEI</string>
@@ -222,7 +230,6 @@
     <string name="passport_loading">Doar o secundă…</string>
     <string name="passport_login">Conectaţi-vă</string>
     <string name="passport_login_check_find_device">Se verifică starea serviciului Localizare dispozitiv…</string>
-    <string name="passport_login_check_find_device_failed_message">Verificați conexiunea la rețea.</string>
     <string name="passport_login_check_find_device_failed_title">"Nu s-a putut verifica starea Localizării telefonului"</string>
     <string name="passport_login_failed">Nu se poate conecta</string>
     <string name="passport_login_find_device_bind">Acest telefon este asociat unui cont Mi existent (%s).</string>
@@ -233,6 +240,8 @@
     <string name="passport_login_title">Conectaţi-vă la un cont existent</string>
     <string name="passport_login_using_other_ways">&lt;u&gt;Alte modalități de conectare&lt;/u&gt;</string>
     <string name="passport_login_with_email_or_id">&lt;u&gt;Conectaţi-vă cu adresa de e-mail sau ID-ul contului Mi&lt;/u&gt;</string>
+    <string name="passport_miui_provision_find_status_text">"Acest telefon este asociat unui cont Mi existent（%1$s）; trebuie să introduceți parola pentru a se verifica telefonul.
+(cod de deblocare: %2$s)"</string>
     <string name="passport_next">Înainte</string>
     <string name="passport_notification_title">Eroare de conectare pentru %1$s</string>
     <string name="passport_password_req_notice">Parola trebuie să aibă 8-16 caractere și să includă atât cifre cât și litere.</string>
@@ -269,6 +278,8 @@
     <string name="passport_register_by_email"><u>Creaţi un cont utilizând adresa de e-mail</u></string>
     <string name="passport_register_restricted">Prea multe conturi au fost asociate cu acest număr, încercați altul</string>
     <string name="passport_register_restricted_title">Nu se poate utiliza acest număr de telefon</string>
+    <string name="passport_registered_phone_user_ID">ID utilizator:%s</string>
+    <string name="passport_registered_phone_user_name">Nume utilizator:%s</string>
     <string name="passport_reject_recycle_account">Nu</string>
     <string name="passport_relogin">Conectaţi-vă din nou</string>
     <string name="passport_relogin_notice">Trebuie să vă conectați din nou</string>
@@ -348,7 +359,6 @@ Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="sns_access_token_expired_warning">Conectarea contului a expirat. Logați-vă din nou pentru a reconecta acest cont.</string>
     <string name="submit_answers">Răspundeți</string>
     <string name="success">Finalizat</string>
-    <string name="timeout_retry">Solicitare expirată, reîncercaţi.</string>
     <string name="trying_read_verify_code_sms">Obţinerea codului de verificare…</string>
     <string name="turn_off_find_device_failed_title">"Nu se poate dezactiva Localizarea dispozitivului"</string>
     <string name="turning_off_find_device">Dezactivare Localizare dispozitiv…</string>
@@ -356,7 +366,7 @@ Asigurați-vă că știți răspunsurile la aceste întrebări."</string>
     <string name="unbind_weibo_description">După ce eliminați acest cont, nu veți putea sincroniza contactele de pe Weibo sau să utilizaţi contul Sina Weibo pentru a vă conecta.</string>
     <string name="update_contacts">Actualizaţi agenda</string>
     <string name="update_contacts_description">Permiteţi Sina Weibo să utilizeze Contul Mi pentru a sincroniza contactele între platforme</string>
-    <string name="update_recovery_info_dialog_message">Trebuie să verificaţi identitatea înainte de a putea actualiza %s.</string>
+    <string name="update_email_address_dialog_message">Trebuie să vă verificați identitatea înainte de a actualiza e-mailul.</string>
     <string name="update_email_address_dialog_title">Actualizare adresă de e-mail</string>
     <string name="update_phone_number_notice_message">Trebuie să vă verificăm identitatea înainte de a actualiza numărul de telefon.</string>
     <string name="updated_nothing">Actualizat</string>
